<resources>
    <string name="app_name">RoomiesPhotoBlog</string>
    <string name="passwordhint">Password..</string>
    <string name="emailhint">Your email..</string>
    <string name="mainlogo">Roomies Login</string>
    <string name="loginButn">Login to Account</string>
    <string name="signupbutn">Sign Up</string>
    <string name="searchmenu">Search</string>
    <string name="accountmenu">Account Settings</string>
    <string name="logoutmenu">Logout</string>
    <string name="mainSignUplogo">Create a new Account</string>
    <string name="createaccount">Register</string>
    <string name="backLogin">Already have an account?</string>
    <string name="confirmpswd">Confirm Password..</string>
    <string name="setupAccountButn">Save Account Settings</string>
    <string name="textViewName">Your name..</string>
    <string name="newPostButtnHint">Add post</string>
    <string name="NewPostDescriptionhint">Add description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
